--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@ body {
   font-size: 1.3rem;
   padding: 70px;
 }
+
+button {
+  font-size: 1.3rem;
+  margin-right: 10px;
+  font-family: "Nunito", Courier, monospace;
+  font-weight: bold;
+  color: rgb(233, 161, 179);
+}
